teacher and model in different py files

--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,10 @@
         "from transformers               import DataCollatorForLanguageModeling, AutoTokenizer, AutoModel\n",
         "from sklearn.metrics            import accuracy_score, mean_absolute_error\n",
         "from torch.utils.data           import DataLoader, Dataset\n",
-        "from einops.layers.torch        import Rearrange"
+        "from einops.layers.torch        import Rearrange\n",
+        "\n",
+        "from treat                      import TreaT\n",
+        "from tiny_teacher_model         import TinyTransformerTeacher"
       ]
     },
     {
@@ -89,259 +92,6 @@
         "    mae = mean_absolute_error(y_true, y_pred)\n",
         "\n",
         "    return acc, mae"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ruqU1eXXsYD7"
-      },
-      "source": [
-        "## Teacher Model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xa1vycExsYD7"
-      },
-      "outputs": [],
-      "source": [
-        "class TinyTransformerTeacher(nn.Module): # model with one single head transformer\n",
-        "    def __init__(self, d_model=96, vocab_size=30522, max_len=512):\n",
-        "        super().__init__()\n",
-        "        self.d_model = d_model\n",
-        "        self.token_emb = emb_model.embeddings\n",
-        "        self.token_emb.requires_grad_(False)\n",
-        "        self.attn = nn.MultiheadAttention(d_model, num_heads=1, batch_first=True)\n",
-        "        self.ffn = nn.Sequential(\n",
-        "            nn.Linear(d_model, d_model),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Linear(d_model, d_model)\n",
-        "        )\n",
-        "        self.lm_head = nn.Linear(d_model, vocab_size)\n",
-        "\n",
-        "    def forward(self, input_ids):\n",
-        "        B, L = input_ids.shape\n",
-        "        x = self.token_emb(input_ids)\n",
-        "        attn_output, attn_weights = self.attn(x, x, x, need_weights=True)\n",
-        "        x = self.ffn(attn_output)\n",
-        "        logits = self.lm_head(x)\n",
-        "        return logits, attn_weights"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "laNaCa1ysYD7"
-      },
-      "source": [
-        "## TreaT Model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "odITA-eEsYD7"
-      },
-      "outputs": [],
-      "source": [
-        "def compute_class_weights(labels, num_classes):\n",
-        "    \"\"\"\n",
-        "    Args:\n",
-        "        labels (Tensor): shape (batch_size,) - class indices\n",
-        "        num_classes (int): total number of classes\n",
-        "    Returns:\n",
-        "        Tensor: weights of shape (num_classes,)\n",
-        "    \"\"\"\n",
-        "    class_counts = torch.bincount(labels, minlength=num_classes)\n",
-        "    total = class_counts.sum().item()\n",
-        "    weights = total / (class_counts.float() + 1e-8)  # avoid division by zero\n",
-        "    weights = weights / weights.sum()  # normalize\n",
-        "    return weights\n",
-        "\n",
-        "\n",
-        "class LocalDualContextGate(nn.Module):\n",
-        "    def __init__(self, d):\n",
-        "        super().__init__()\n",
-        "        self.gate_proj = nn.Linear(d, d, bias=False)\n",
-        "\n",
-        "    def forward(self, M_L, M_R, x_shared):\n",
-        "        \"\"\"\n",
-        "        M_L, M_R: [B, D, D]\n",
-        "        x_shared: [B, D] — averaged summary of left & right (used for both scores)\n",
-        "        returns: fused summary [B, D, D]\n",
-        "        \"\"\"\n",
-        "        B, D, _ = M_L.shape\n",
-        "        x_proj = self.gate_proj(x_shared)  # [B, D]\n",
-        "\n",
-        "        # Project x into both memory blocks\n",
-        "        score_left = (x_proj.unsqueeze(1) @ M_L @ x_proj.unsqueeze(-1)).reshape(B, 1)\n",
-        "        score_right = (x_proj.unsqueeze(1) @ M_R @ x_proj.unsqueeze(-1)).reshape(B, 1)\n",
-        "\n",
-        "        # Normalize scores\n",
-        "        scores = torch.softmax(torch.cat([score_left, score_right], dim=-1), dim=-1)\n",
-        "\n",
-        "        # Weighted fusion\n",
-        "        return scores[:, 0].view(B, 1, 1) * M_L + scores[:, 1].view(B, 1, 1) * M_R\n",
-        "\n",
-        "\n",
-        "class MemoryTree(nn.Module):\n",
-        "\n",
-        "    def __init__(\n",
-        "        self,\n",
-        "        leafs : torch.Tensor,\n",
-        "        X : torch.Tensor,\n",
-        "        fusion_fn=None\n",
-        "    ):\n",
-        "        \"\"\"\n",
-        "        Args:\n",
-        "            leafs (t.Tensor): B, L, D, D\n",
-        "        \"\"\"\n",
-        "        super().__init__()\n",
-        "\n",
-        "        B, L, D, _ = leafs.shape\n",
-        "        assert L % 2 == 0, \"Input length must be divisible by 2\"\n",
-        "        self.tree_depth = int(torch.log2(torch.tensor(L).float()).item())\n",
-        "        self.hierarchical_memory = [leafs]\n",
-        "        self.fusion_fn = fusion_fn or self.default_fusion_fn\n",
-        "\n",
-        "        self.context_summary = [X]  # [B, L, D]\n",
-        "        last_layer = leafs\n",
-        "        last_context = X\n",
-        "\n",
-        "        for level in range(self.tree_depth - 1):\n",
-        "            B, L_prev, D, _ = last_layer.shape\n",
-        "            pairs = last_layer.view(B, L_prev // 2, 2, D, D)\n",
-        "            M1, M2 = pairs[:, :, 0], pairs[:, :, 1]  # [B, L//2, D, D]\n",
-        "\n",
-        "            # Summarize the corresponding X embeddings\n",
-        "            X_prev = last_context\n",
-        "            x_pairs = X_prev.view(B, L_prev // 2, 2, D)\n",
-        "            xL, xR = x_pairs[:, :, 0], x_pairs[:, :, 1]  # [B, L//2, D]\n",
-        "            x_shared = (xL + xR) / 2  # shared context\n",
-        "\n",
-        "            fused = self.fusion_fn(\n",
-        "                M1.reshape(-1, D, D),\n",
-        "                M2.reshape(-1, D, D),\n",
-        "                x_shared.reshape(-1, D)\n",
-        "            ).view(B, L_prev // 2, D, D)\n",
-        "\n",
-        "            self.hierarchical_memory.append(fused)\n",
-        "            self.context_summary.append(x_shared)\n",
-        "\n",
-        "            last_layer = fused\n",
-        "            last_context = x_shared\n",
-        "\n",
-        "        assert self.hierarchical_memory[-1].shape[1] == 2\n",
-        "        self.softmax = nn.Softmax(dim=1)\n",
-        "\n",
-        "    def oracle(\n",
-        "        self,\n",
-        "        q : torch.Tensor,\n",
-        "        expected : torch.Tensor = None\n",
-        "    ):\n",
-        "        \"\"\"\n",
-        "        Args:\n",
-        "            q (t.Tensor): (B, L_k, D)\n",
-        "            expected (t.Tensor): (B, L_k)\n",
-        "        \"\"\"\n",
-        "\n",
-        "        B, L_k, D = q.shape\n",
-        "        get_side_contextual_emb = lambda side_embeddings, query, B: (query.unsqueeze(1) @ side_embeddings @ query.unsqueeze(-1)).reshape(B)\n",
-        "\n",
-        "        if expected != None:\n",
-        "            return self._oracle_train(q, expected) # returns loss\n",
-        "\n",
-        "        else:\n",
-        "\n",
-        "            batch_idx = torch.arange(B, device = q.device)\n",
-        "            all_query_choices = torch.empty(B, L_k, device=q.device)\n",
-        "            for query_id in range(L_k):\n",
-        "\n",
-        "                choices = torch.zeros(B, dtype=torch.long, device=q.device)\n",
-        "                for level in range(self.tree_depth - 1, -1, -1):\n",
-        "                    # Only select the memory we need for processing the hard gating. Based on q (B, L_k, D)\n",
-        "                    query = q[:,query_id] # B, D\n",
-        "                    left_embeddings = self.hierarchical_memory[level][batch_idx, choices * 2] # B, These are global choices\n",
-        "                    right_embeddings = self.hierarchical_memory[level][batch_idx, choices * 2 + 1]\n",
-        "                    left_contextual_emb = get_side_contextual_emb(left_embeddings, query, B)\n",
-        "                    right_contextual_emb = get_side_contextual_emb(right_embeddings, query, B)\n",
-        "                    choices = (choices * 2) + (left_contextual_emb < right_contextual_emb)\n",
-        "\n",
-        "                all_query_choices[:,query_id] = choices\n",
-        "\n",
-        "            return all_query_choices\n",
-        "\n",
-        "    def _oracle_train(self, q:torch.Tensor, expected:torch.Tensor):\n",
-        "\n",
-        "        B, L_k, D = q.shape\n",
-        "        full_loss = 0.0\n",
-        "\n",
-        "        # calculate class weights\n",
-        "        class_weights_per_level = []\n",
-        "        for level in range(self.tree_depth - 1, -1, -1):\n",
-        "            labels = expected // (2 ** level)\n",
-        "            num_classes = self.hierarchical_memory[0].shape[1] // (2 ** level)\n",
-        "            class_weights = compute_class_weights(labels.reshape(labels.shape[0] * labels.shape[1]), num_classes).to(q.device)\n",
-        "            class_weights_per_level.insert(0, class_weights)\n",
-        "\n",
-        "        for query_id in range(L_k):\n",
-        "            for level in range(self.tree_depth - 1, -1, -1):\n",
-        "                labels = expected[:, query_id] // (2 ** level) # B, 1 One label per batch for a specific token\n",
-        "                contextual_emb = (q[:, query_id].unsqueeze(1).unsqueeze(2) @ self.hierarchical_memory[level]).squeeze(2) # (B, D) @ (B, L//2**level, D, D) -> B, L//2**level, D\n",
-        "                logits = (contextual_emb @ q[:, query_id].unsqueeze(-1)).squeeze(-1)\n",
-        "                loss = F.cross_entropy(logits.squeeze(-1), labels, weight=class_weights_per_level[level])\n",
-        "                full_loss += loss\n",
-        "\n",
-        "        return full_loss\n",
-        "\n",
-        "\n",
-        "class TreaT(nn.Module):\n",
-        "\n",
-        "    def __init__(\n",
-        "        self,\n",
-        "        d_model : int\n",
-        "    ):\n",
-        "        super().__init__()\n",
-        "\n",
-        "        self.W_kv = nn.Linear(d_model, 2 * d_model, bias = False)\n",
-        "        self.W_q = nn.Linear(d_model, d_model, bias=False)\n",
-        "        self.token_emb = teacher.token_emb\n",
-        "        self.rearrange = Rearrange('b l (k d) -> k b l d', k=2)\n",
-        "        self.local_fusion = LocalDualContextGate(d_model)\n",
-        "\n",
-        "    def build_tree(\n",
-        "        self,\n",
-        "        context : torch.Tensor\n",
-        "    ):\n",
-        "        B, L = context.shape\n",
-        "        context_embeddings = self.token_emb(context)\n",
-        "        D = context_embeddings.shape[-1]\n",
-        "        key, values = self.rearrange(self.W_kv(context_embeddings)) # 2, B, L, D\n",
-        "        key = key\n",
-        "        values = values\n",
-        "        leafs = key.unsqueeze(-1) @ values.unsqueeze(-2)\n",
-        "        return MemoryTree(leafs, context_embeddings, fusion_fn=self.local_fusion)\n",
-        "\n",
-        "    def forward(\n",
-        "        self,\n",
-        "        query : torch.Tensor,\n",
-        "        memory_tree : MemoryTree,\n",
-        "        expected : torch.Tensor = None\n",
-        "    ):\n",
-        "        \"\"\"\n",
-        "        Args:\n",
-        "            query (t.Tensor): (B, L_k)\n",
-        "            memory_tree (MemoryTree):\n",
-        "            returns a loss in case of training and prediction in case of eval\n",
-        "        \"\"\"\n",
-        "        B, L = query.shape\n",
-        "        query_emb = self.token_emb(query)\n",
-        "        query_emb = self.W_q(query_emb)\n",
-        "        return memory_tree.oracle(query_emb, expected)\n"
       ]
     },
     {
@@ -615,7 +365,6 @@
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-        "emb_model = AutoModel.from_pretrained(model_name)\n",
         "\n",
         "# ---- Step 2: Load and tokenize WikiText-2 and chunk into blocks ----\n",
         "\n",
@@ -639,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -670,7 +419,7 @@
         }
       ],
       "source": [
-        "teacher = TinyTransformerTeacher(d_model=384).to(device)\n",
+        "teacher = TinyTransformerTeacher(d_model=384, model_name=model_name).to(device)\n",
         "optimizer = torch.optim.Adam(teacher.parameters(), lr=1e-4)\n",
         "\n",
         "for epoch in range(50):\n",
